@@ -38,6 +38,7 @@ usage() {
   echo "-ld, --lockdir: The directory where the executing process id is stored to verify that that only one instance"
   echo "    is started. Defaults to /var/tmp."
   echo "-j, --jmx: Allows monitoring/managing Jetty through JMX."
+  echo "-ni, --noninteractive: Don't ask questions to the user. Useful when called in an automated script."
   echo ""
   echo "Example: start_xwiki.sh -p 8080 -sp 8079"
 }
@@ -94,6 +95,11 @@ while [[ $# > 0 ]]; do
       ;;
     -j|--jmx)
       JETTY_OPTS="$JETTY_OPTS --module=jmx"
+      shift
+      ;;
+    -ni|--noninteractive)
+      XWIKI_NONINTERACTIVE=true
+      shift
       ;;
     -h|--help)
       usage
@@ -123,8 +129,6 @@ if [ -e $XWIKI_LOCK_FILE ]; then
   fi
 fi
 
-echo Starting Jetty on port ${JETTY_PORT}, please wait...
-
 # Location where XWiki stores generated data and where database files are.
 XWIKI_DATA_DIR=${xwikiDataDir}
 XWIKI_OPTS="$XWIKI_OPTS -Dxwiki.data.dir=$XWIKI_DATA_DIR"
@@ -138,16 +142,13 @@ mkdir -p $XWIKI_DATA_DIR 2>/dev/null
 # Ensure the logs directory exists as otherwise Jetty reports an error
 mkdir -p $XWIKI_DATA_DIR/logs 2>/dev/null
 
-# Set up the Jetty Base directory (used for custom Jetty configuration) to point to the Data Directory
-# Also created some Jetty directorie that Jetty would otherwise create at first startup. We do this to avoid
-# cryptic messages in the logs such as: "MKDIR: ${jetty.base}/lib"
-JETTY_BASE=$XWIKI_DATA_DIR/jetty
-mkdir -p $JETTY_BASE/lib/ext 2>/dev/null
+# Set up the Jetty Base directory (used for custom Jetty configuration) to be the current directory where this file is.
+# Also make sure the log directory exists since Jetty won't create it.
+JETTY_BASE=.
 mkdir -p $JETTY_BASE/logs 2>/dev/null
-mkdir -p $JETTY_BASE/resources 2>/dev/null
-mkdir -p $JETTY_BASE/webapps 2>/dev/null
 
-# Specify Jetty's home and base directories
+# Specify Jetty's home directory to be the directory named jetty inside the jetty base directory.
+# Thus JETTY_HOME/data and JETTY_HOME/webapps are inside the jetty base directory.
 JETTY_HOME=jetty
 XWIKI_OPTS="$XWIKI_OPTS -Djetty.home=$JETTY_HOME -Djetty.base=$JETTY_BASE"
 
@@ -155,15 +156,13 @@ XWIKI_OPTS="$XWIKI_OPTS -Djetty.home=$JETTY_HOME -Djetty.base=$JETTY_BASE"
 XWIKI_OPTS="$XWIKI_OPTS -Dfile.encoding=UTF8"
 
 # Specify port on which HTTP requests will be handled
-JETTY_OPTS="$JETTY_OPTS jetty.port=$JETTY_PORT"
+JETTY_OPTS="$JETTY_OPTS jetty.http.port=$JETTY_PORT"
 # In order to print a nice friendly message to the user when Jetty has finished loading the XWiki webapp, we pass
 # the port we use as a System Property
-XWIKI_OPTS="$XWIKI_OPTS -Djetty.port=$JETTY_PORT"
+XWIKI_OPTS="$XWIKI_OPTS -Djetty.http.port=$JETTY_PORT"
 
 # Specify port and key to stop a running Jetty instance
 JETTY_OPTS="$JETTY_OPTS STOP.KEY=xwiki STOP.PORT=$JETTY_STOP_PORT"
-
-# Check version of Java
 
 # Returns the Java version.
 # 8 for 1.8.0_nn, 9 for 9-ea etc, and "no_java" for undetected
@@ -195,20 +194,34 @@ java_version() {
   fi
   echo "$result"
 }
+
+# Check version of Java (when in non-interactive mode)
 JAVA_VERSION="$(java_version)"
-if [[ "$JAVA_VERSION" -eq "no_java" ]]; then
-  echo "No Java found. You need Java installed for XWiki to work."
-  exit 0
-fi
-if [ "$JAVA_VERSION" -lt 8 ]; then
-  echo This version of XWiki requires Java 8 or greater.
-  exit 0
-fi
-if [ "$JAVA_VERSION" -gt 8 ]; then
-  read -p "You're using Java $JAVA_VERSION which XWiki doesn't fully support yet. Continue (y/N)? " -n 1 -r
-  if [[ ! $REPLY =~ ^[Yy]$ ]]; then
+if [ ! "$XWIKI_NONINTERACTIVE" = true ] ; then
+  if [[ "$JAVA_VERSION" -eq "no_java" ]]; then
+    echo "No Java found. You need Java installed for XWiki to work."
     exit 0
   fi
+  if [ "$JAVA_VERSION" -lt 8 ]; then
+    echo This version of XWiki requires Java 8 or greater.
+    exit 0
+  fi
+  if [ "$JAVA_VERSION" -gt 11 ]; then
+    read -p "You're using Java $JAVA_VERSION which XWiki doesn't fully support yet. Continue (y/N)? " -n 1 -r
+    if [[ ! $REPLY =~ ^[Yy]$ ]]; then
+      exit 0
+    fi
+  fi
+fi
+
+# TODO: Remove once https://jira.xwiki.org/browse/XRENDERING-616 and https://jira.xwiki.org/browse/XWIKI-19034 are
+# fixed. In summary we need this to allow the XWiki code or 3rd party code to use reflection to access private
+# variables (setAccessible() calls). See https://tinyurl.com/tdhkn6mp
+if [ "$JAVA_VERSION" -gt 11 ]; then
+  XWIKI_OPENS_LANG="--add-opens java.base/java.lang=ALL-UNNAMED"
+  XWIKI_OPENS_UTIL="--add-opens java.base/java.util=ALL-UNNAMED"
+  XWIKI_OPENS_CONCURRENT="--add-opens java.base/java.concurrent=ALL-UNNAMED"
+  XWIKI_OPTS="$XWIKI_OPENS_LANG $XWIKI_OPENS_UTIL $XWIKI_OPENS_CONCURRENT $XWIKI_OPTS"
 fi
 
 # We save the shell PID here because we do an exec below and exec will replace the shell with the executed command
